<resources>
    <string name="app_name">ScanYourBill</string>
    <string name="button">Add New Wallet</string>
    <string name="select_wall">Select Wallet</string>
    <string name="add_new_wal">Add New Wallet</string>
    <string name="account_nam">Account Name</string>
    <string name="save_wall">Save Wallet</string>
    <string name="add_new_trans">Add Transaction</string>
    <string name="save_trans">Save Activity</string>
    <string name="amount">Amount</string>
    <string name="category">Select Category</string>
    <string name="date">Today</string>
    <string name="wallet">Select Wallet</string>
    <string name="notes">Notes</string>
    <string name="icon">Icon</string>
    <string name="search">Search Notes</string>
    <string name="act_type">Type</string>
    <string name="clear">Clear</string>
    <string name="dtl_type">Type</string>
    <string name="dtl_wallet">Account</string>
    <string name="dtl_amount">Amount</string>
    <string name="dtl_date">Date</string>
    <string name="dtl_note">Note</string>
    <string name="dtl_category">Category</string>
    <string name="account">Account</string>
    <string name="detail">Detail</string>
    <string name="username">Username</string>
    <string name="top_spending_category">Top Activity Category</string>
    <string name="clothes">Clothes</string>
    <string name="most_used_wallet">Most Used Wallet</string>
    <string name="tunai">Tunai</string>
    <string name="welcome_text">Selamat Datang!</string>
    <string name="project_title">ScanYourBill</string>
    <string name="insert_username">Masukkan username kamu dibawah ya!</string>
    <string name="next">Lanjutkan</string>
    <string name="welcome_first">Selamat Datang</string>
    <string name="insert_pin_label">Buat 6 Digit PIN Kamu</string>
    <string name="kode_pin">Kode PIN</string>
    <string name="hint_pin">PIN harus berjumlah 6 angka secara acak dan tidak boleh sama seperti: 000000, 111111, 999999 dan yang berurutan seperti: 123456, 234567, 654321</string>
    <string name="insert_pin_login">Masukkan PIN Kamu</string>
    <string name="insert_your_pin">Masukkan PIN Kamu</string>
    <string name="forget_label">Kamu Lupa PIN?</string>
    <string name="forget_btn">Reset PIN Disini</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trans_tab_1">Last Month</string>
    <string name="trans_tab_2">This Month</string>
    <string name="trans_tab_3">Future</string>
    <string name="transaction">Transaction</string>
    <string name="inflow">Inflow</string>
    <string name="inflow_val">Amount Inflow</string>
    <string name="outflow">Outflow</string>
    <string name="outflow_val">Amount Outflow</string>
    <string name="total_amount">Total Amount</string>
    <string name="budget_tab_1">Custom</string>
    <string name="budget_tab_2">This Month</string>
    <string name="budget_tab_3">This Quarter</string>
    <string name="running_budget">Running Budget</string>
    <string name="total_budget_this_period">Total budget this period</string>
    <string name="total_spending_amount">Total spending amount</string>
    <string name="end_of_this_period">End of this period</string>
    <string name="this_period_budget">This</string>
    <string name="total_spending">total</string>
    <string name="end_of_period">Days</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="total_remaining_spending_amount">Total Remaining Spending Amount</string>
    <string name="create_another_budget">Create Another Budget</string>
    <string name="category_1">Category 1</string>
    <string name="success_created_new_wallet">New wallet has been created</string>
    <string name="expense">expense</string>
    <string name="income">income</string>
    <string name="rp100_000">Rp100.000</string>
    <string name="see_all">See All</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="balance_rp10_800_000">Balance: Rp10.800.000</string>
    <string name="type">Select Type</string>
    <string name="income_capital_i">Income</string>
    <string name="expense_capital_e">Expense</string>
    <string name="search_only">Search</string>

    <string name="salary">Salary</string>
    <string name="incoming_transfer">Incoming Transfer</string>
    <string name="dividend">Dividend</string>
    <string name="clothing">Clothing</string>
    <string name="food">Food</string>
    <string name="stationery">Stationery</string>
    <string name="toiletries">Toiletries</string>
    <string name="medical_and_health_care">Medical and Health Care</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="_25_juni_2024">25 Juni 2024</string>
    <string name="paket_telkomsel_sangat_mahal_sekali">Paket Telkomsel sangat mahal sekali</string>
    <string name="bill_scanner">Bill Scanner</string>
    <string name="total">total</string>
    <string name="_21_juni_2024">21 Juni 2024</string>
    <string name="top_activities">Top Activities</string>
    <string name="accountt">Account</string>
    <string name="ttttt">Wallet</string>
    <string name="transactiono">Transaction</string>
    <string name="homeo">Home</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="tax">Tax</string>
    <string name="bill_name">Bill Name</string>
    <string name="grand_total">Grand Total</string>
    <string name="_2000000000">2000000000</string>
    <string name="service_tax">Service Tax</string>
    <string name="discount">Discount</string>


</resources>