<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_juni_2024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingHorizontal="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/wide_picker_white"
        app:layout_constraintTop_toBottomOf="@+id/item_date"

        >

        <TextView
            android:id="@+id/item_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:text="@string/paket_telkomsel_sangat_mahal_sekali"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textFontWeight="900"
            android:text="@string/rp100_000"
            android:layout_alignParentEnd="true" />




    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>