<?xml version="1.0" encoding="utf-8"?>
<!-- Auto layout, variables, and unit scale are not yet supported -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_wallet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FAF0FF"
    android:orientation="vertical">
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/detail"
            android:textAppearance="@style/select_wall" />

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/dtl_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dtl_category"
            android:textAppearance="@style/select_wall" />

    </RelativeLayout>


    <TextView
        android:id="@+id/act_type"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/act_type"
        android:textAppearance="@style/account_nam"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2" />

    <LinearLayout
        android:id="@+id/rectangle_2"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/wide_picker_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1">

        <TextView
            android:id="@+id/dtl_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dtl_type"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="199dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/wallet"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/account"
        android:textAppearance="@style/account_nam"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/notesEditText"
        app:layout_constraintStart_toStartOf="@+id/notesEditText" />

    <LinearLayout
        android:id="@+id/notesEditText"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="44dp"
        android:background="@drawable/wide_picker_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2">

        <TextView
            android:id="@+id/dtl_wallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dtl_wallet"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="199dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rectangle_4"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="44dp"
        android:background="@drawable/wide_picker_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesEditText">

        <TextView
            android:id="@+id/dtl_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dtl_amount"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="199dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/amount"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/amount"
        android:textAppearance="@style/account_nam"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_4"
        app:layout_constraintStart_toStartOf="@+id/rectangle_4" />

    <LinearLayout
        android:id="@+id/inputType"
        android:layout_marginTop="44dp"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/wide_picker_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4">

        <TextView
            android:id="@+id/dtl_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dtl_date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="199dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/dtl_date"
        android:textAppearance="@style/account_nam"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/inputType"
        app:layout_constraintStart_toStartOf="@+id/inputType" />


    <LinearLayout
        android:id="@+id/inputCategory"
        android:layout_marginTop="44dp"
        android:layout_width="328dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/wide_picker_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputType">

        <TextView
            android:id="@+id/dtl_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dtl_note"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="199dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/notes"
        android:layout_width="82dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/notes"
        android:textAppearance="@style/account_nam"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/inputCategory"
        app:layout_constraintStart_toStartOf="@+id/inputCategory" />


    <!-- Auto layout, variables, and unit scale are not yet supported -->


</androidx.constraintlayout.widget.ConstraintLayout>