<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buat_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FAF0FF">

    <TextView
        android:id="@+id/kode_pin_label"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="top"
        android:lineSpacingExtra="6sp"
        android:text="@string/kode_pin"
        android:textAppearance="@style/kode_pin_label"
        android:translationY="-3.07sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/insert_labe"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/insert_pin_label"
        android:textAppearance="@style/insert_label"
        android:textStyle="bold"
        android:translationY="-2.47sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="133dp" />

    <com.poovam.pinedittextfield.SquarePinField
        android:id="@+id/squareField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSelectHandle="@drawable/text_handle"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:fieldBgColor="@color/white"
        app:noOfFields="6"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/hint_pin"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/hint_pin"
        android:textAppearance="@style/account_nam"
        android:translationY="-2.3sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="323dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/purple_btn_canvas"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="19dp"
        android:text="@string/next"
        android:textColor="#C6C6C6"
        android:textSize="12sp"
        app:backgroundTint="@null"
        app:cornerRadius="0dp"
        app:rippleColor="@android:color/transparent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="646dp" />
</androidx.constraintlayout.widget.ConstraintLayout>