<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaksi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FAF0FF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rectangle_1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/transaction"
            android:layout_width="182dp"
            android:layout_height="58dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:paddingLeft="8dp"
            android:paddingTop="14dp"
            android:text="@string/running_budget"
            android:textAppearance="@style/transaction"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/canvas_card_white"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp">


            <TextView
                android:id="@+id/inflow"
                android:layout_width="157dp"
                android:layout_height="26dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:lineSpacingExtra="6sp"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:text="@string/total_budget_this_period"
                android:textAppearance="@style/inflow"
                android:translationY="-3.12sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="3dp" />

            <TextView
                android:id="@+id/inflow_val"
                android:layout_width="141dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:gravity="top"
                android:lineSpacingExtra="8sp"
                android:paddingTop="6dp"
                android:text="@string/this_period_budget"
                android:textAppearance="@style/inflow_val"
                android:textStyle="bold"
                android:translationY="-3.8sp"
                app:layout_constraintStart_toEndOf="@+id/inflow"
                tools:layout_editor_absoluteY="3dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


            <TextView
                android:id="@+id/outflow"
                android:layout_width="156dp"
                android:layout_height="29dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:lineSpacingExtra="6sp"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:text="@string/total_spending_amount"
                android:textAppearance="@style/inflow"
                android:translationY="-3.12sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="3dp" />

            <TextView
                android:id="@+id/outflow_val"
                android:layout_width="140dp"
                android:layout_height="29dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:gravity="top"
                android:lineSpacingExtra="8sp"
                android:paddingTop="6dp"
                android:text="@string/total_spending"
                android:textAppearance="@style/outflow_val"
                android:textStyle="bold"
                android:translationY="-3.8sp"
                app:layout_constraintStart_toEndOf="@+id/outflow"
                tools:layout_editor_absoluteY="1dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
            tools:layout_editor_absoluteX="0dp">


            <TextView
                android:id="@+id/end_period"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:lineSpacingExtra="6sp"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:text="@string/end_of_this_period"
                android:textAppearance="@style/inflow"
                android:translationY="-3.12sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="3dp" />

            <TextView
                android:id="@+id/end_period_val"
                android:layout_width="139dp"
                android:layout_height="26dp"

                android:layout_alignParentTop="true"
                android:layout_marginStart="92dp"
                android:gravity="top"
                android:lineSpacingExtra="8sp"
                android:paddingTop="6dp"
                android:text="@string/end_of_period"
                android:textAppearance="@style/outflow_val"
                android:textStyle="bold"
                android:translationY="-3.8sp"
                app:layout_constraintStart_toEndOf="@+id/end_period"
                tools:layout_editor_absoluteY="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <TextView
                android:id="@+id/remaining"
                android:layout_width="311dp"
                android:layout_height="22dp"
                android:layout_alignParentTop="true"
                android:lineSpacingExtra="-1sp"
                android:text="@string/remaining_amount"
                android:textAppearance="@style/remaining_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/total_remai"
                android:layout_width="168dp"
                android:layout_height="54dp"
                android:lineSpacingExtra="9sp"
                android:layout_marginTop="10dp"
                android:text="@string/total_remaining_spending_amount"
                android:textAlignment="center"
                android:textAppearance="@style/inflow"
                android:translationY="-4.49sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remaining" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="34dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/purple_btn_canvas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" >

        <TextView
            android:id="@+id/button_text"
            android:layout_width="135dp"
            android:layout_height="16dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="0sp"
            android:text="@string/create_another_budget"
            android:textAppearance="@style/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
