<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@drawable/bg_input_pin">

    <TextView
        android:id="@+id/masukkan_pi"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="3sp"
        android:text="@string/insert_your_pin"
        android:textAppearance="@style/insert_pin"
        android:translationY="-1.61sp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="119dp"
        android:textStyle="bold"/>

    <com.poovam.pinedittextfield.CirclePinField
        android:id="@+id/circleField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSelectHandle="@drawable/text_handle"
        android:textSize="16sp"
        app:circleRadius="8dp"
        app:fieldBgColor="#ddd"
        app:fillerColor="@color/colorPrimary"
        app:fillerRadius="2dp"
        app:noOfFields="6"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/insert_labe"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="7sp"
        android:text="@string/forget_label"
        android:textAppearance="@style/forget_label"
        android:translationY="-3.44sp"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="260dp" />

    <TextView
        android:id="@+id/insert_labe"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="7sp"
        android:text="@string/forget_btn"
        android:textAppearance="@style/forget_btn"
        android:textStyle="bold"
        android:translationY="-3.44sp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="292dp" />
</androidx.constraintlayout.widget.ConstraintLayout>